--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,7 @@ PublishScripts/
 ## The packages folder can be ignored because of Package Restore
 #**/packages/*
 ## except build/, which is used as an MSBuild target.
-#!**/packages/build/
+!packages/**/build/
 ## Uncomment if necessary however generally it will be regenerated when needed
 ##!**/packages/repositories.config
 ## NuGet v3's project.json files produces more ignoreable files
