--- a/TestHost.Core.UnitTests/TestHost.Core.UnitTests.fsproj
+++ b/TestHost.Core.UnitTests/TestHost.Core.UnitTests.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\xunit.runner.visualstudio.2.0.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\packages\xunit.runner.visualstudio.2.0.0\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\packages\xunit.core.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.core.props" Condition="Exists('..\packages\xunit.core.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.core.props')" />
@@ -69,80 +69,6 @@
     <Content Include="app.config" />
     <Compile Include="TestRuntime\DependencyTests.fs" />
     <EmbeddedResource Include="Resources\Resources.resx" />
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\FSharp.Core.dll">
-      <Link>TestData\bins\XUnit20FSPortable\FSharp.Core.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\FSharp.Core.xml">
-      <Link>TestData\bins\XUnit20FSPortable\FSharp.Core.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.abstractions.dll">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.abstractions.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.abstractions.xml">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.abstractions.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.assert.dll">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.assert.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.assert.pdb">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.assert.pdb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.assert.xml">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.assert.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.core.dll">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.core.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.core.pdb">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.core.pdb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.core.xml">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.core.xml</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\xunit.execution.desktop.dll">
-      <Link>TestData\bins\XUnit20FSPortable\xunit.execution.desktop.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\XUnit20FSPortable.dll">
-      <Link>TestData\bins\XUnit20FSPortable\XUnit20FSPortable.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\XUnit20FSPortable.pdb">
-      <Link>TestData\bins\XUnit20FSPortable\XUnit20FSPortable.pdb</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\TestExecution\TestData\bins\XUnit20FSPortable\XUnit20FSPortable.XML">
-      <Link>TestData\bins\XUnit20FSPortable\XUnit20FSPortable.XML</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\NoTestAdapters\bins\AUnit.TestAdapter.Runtime.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\NoTestAdapters\bins\BUnit.TestAdapter.Runtime.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\TestAdapters\A\AUnit.TestAdapter.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\TestAdapters\A\rt\AUnit.TestAdapter.Runtime.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\TestAdapters\B\BUnit.TestAdapter.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="TestData\TestAdapters\B\rt\BUnit.TestAdapter.Runtime.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <Compile Include="CoverageDataCollectorTests.fs" />
     <Compile Include="XUnitTestExecutorTests.fs" />
     <Compile Include="XUnitTestDiscovererTests.fs" />
@@ -211,6 +137,11 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /frys $(ProjectDir)\TestData $(TargetDir)\TestData\
+xcopy /frys $(ProjectDir)\..\TestExecution\TestData $(TargetDir)\TestData
+</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
