--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,17 +4,10 @@ image:
 - Visual Studio 2013
 - Visual Studio 2015
 
-configuration: Release
-
-platform: Any CPU
-
 build_script:
-- cmd: .\build.cmd Build
+- cmd: .\build.cmd
 
-test:
-  assemblies:
-  - .\build\*.UnitTests.dll
-  - .\build\*.ContractTests.dll
+test: off
 
 notifications:
 - provider: Email
