--- a/Hosts/VS/CommonUI/packages.config
+++ b/Hosts/VS/CommonUI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BuildTools.FxCop" version="1.0.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.1.28" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.1.28" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net45" />
