--- a/Common/Domain/packages.config
+++ b/Common/Domain/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharpLint.MSBuild" version="0.4.5" targetFramework="net40" />
   <package id="Microsoft.Diagnostics.Tracing.EventRegister" version="1.1.28" targetFramework="net40" />
-  <package id="FSharpLint.MSBuild" version="0.4.5-beta" targetFramework="net40" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource" version="1.1.28" targetFramework="net40" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net40" />
 </packages>
