--- a/Engine.Core/Engine.Core.fsproj
+++ b/Engine.Core/Engine.Core.fsproj
@@ -58,7 +58,6 @@
       <Link>Constants.fs</Link>
     </Compile>
     <Compile Include="AssemblyAttributes.fs" />
-    <Compile Include="Logger.fs" />
     <Compile Include="SafeExec.fs" />
     <Compile Include="EngineConfig.fs" />
     <Compile Include="EngineConfigLoader.fs" />
@@ -73,6 +72,11 @@
     <Content Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\Logger\Logger.fsproj">
+      <Name>Logger</Name>
+      <Project>{e5fb2293-3055-4c4c-800e-a31ac891a931}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
