--- a/TestHost/TestHost.csproj
+++ b/TestHost/TestHost.csproj
@@ -85,6 +85,10 @@
       <Project>{e5fb2293-1833-4c4c-800e-a31ac891a931}</Project>
       <Name>Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Common\Logger\Logger.fsproj">
+      <Project>{e5fb2293-3055-4c4c-800e-a31ac891a931}</Project>
+      <Name>Logger</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TestExecution\TestRuntime\TestRuntime.csproj">
       <Project>{0fea2e86-4ee0-4fd8-949d-c74189b855d9}</Project>
       <Name>TestRuntime</Name>
